# gay

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_tables.py
src/ingest_pipeline/: __main__.py  config.py  db.py  logging.py  models.py
