[project]
name = "ingest_pipeline"
version = "0.1.0"
description = "Social listening ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
